Removed unused name variable. Category list uses translated name. #41
