# database/models/categories.js
@@ -1,5 +1,4 @@
 module.exports = function(sequelize, DataTypes) {
   return sequelize.define("Categories", {
-    categoryName: {type:DataTypes.STRING}
   });
 };
